지원 목록 container -> container-fluid

--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -173,7 +173,7 @@
                     </div>
                 </div>
 
-                <div class="container">
+                <div class="container-fluid">
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-7 apply_section">
                    
                     <table class="table">
