--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -23,12 +23,12 @@
                     <img id="message_Update" src="/images/message_Icon.png" height="13%" />
                     <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
                 </div>
-         
+
                   <div>
                       &nbsp;
                       <strong style="cursor:pointer"> <%= user %></strong>
                   </div>
-     
+
                     <div>
                             <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
                         </div>
@@ -73,28 +73,29 @@
 
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                             <label for="firstName" class="col-sm-12 control-label">학점</label>
-                            <input type="text" id="score" placeholder="ex) 3.5" value="3.54" readonly class="form-control">
+                            <input type="text" id="score" value=<%= rows[0].grade %>  readonly class="form-control">
+
                         </div>
 
 
 
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                             <label for="firstName" class="col-sm-12 control-label">토익-Toeic</label>
-                            <input type="text" id="toeic" placeholder="ex) 840" value="890" readonly class="form-control">
+                            <input type="text" id="toeic" value=<%= rows[0].toeic %> value="890" readonly class="form-control">
                         </div>
 
 
 
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4">
                             <label for="firstName" class="col-sm-12 control-label">토스-Toeic Speaking</label>
-                            <select class="form-control" id="toss">
-                                <option>미응시</option>
-                                <option>Level1</option>
-                                <option>Level2</option>
-                                <option>Level3</option>
-                                <option>Level4</option>
-                                <option>Level5</option>
-                                <option>Level6</option>
+                            <select class="form-control"  id="toss">
+                                <option value="0">미응시</option>
+                                <option value="1">Level1</option>
+                                <option value="2">Level2</option>
+                                <option value="3">Level3</option>
+                                <option value="4">Level4</option>
+                                <option value="5">Level5</option>
+                                <option value="6">Level6</option>
                                 <option>Level7</option>
                                 <option>Level8</option>
                             </select>
