--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/userDetail.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 </head>
@@ -29,8 +30,8 @@
                     <strong><%= user %></strong>
                 </div>
                 <div>
-                        <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
-                    </div>
+                    <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
+                </div>
             </div>
         </div>
     </div>
@@ -47,7 +48,7 @@
                     <div class="col-xs-6 col-sm-4 col-md-4 col-lg-4">
                         <div style="display: flex;">
                             <h3 style="margin-left: auto;margin-right: auto;padding-left: 8px;color: rgb(255, 255, 255);">
-                                <div class="send_msg_btn" title="메시지 전송하기" onclick="alert('메시지 전송')">
+                                <div class="send_msg_btn" title="메시지 전송하기" data-toggle="modal" data-target="#dialogMessage">
                                     <!-- 메시지 전송 버튼 -->
                                     <img src="/images/message_light.png" class="send_msg_btn_img" alt="">
                                 </div>
@@ -65,6 +66,37 @@
                 </div>
             </div>
         </div>
+
+               <!-- The Modal -->
+    <div class="modal dialogBack" id="dialogMessage">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content dialogAnim">
+            
+                <!-- Modal Header -->
+                <div class="modal-header modal_header_styler">
+                <h4 class="modal-title" style="color: white">Message</h4>
+                <button type="button" class="close modal_close_btn_styler" data-dismiss="modal" title="닫기">&times;</button>
+                </div>
+                
+                <!-- Modal body -->
+                <div class="modal-body modal_body_styler">
+                    <p style="font-size: 14px"><strong style="font-size: 14px">From. </strong><!--보내는 사람-->Chyh1900</p>
+                    <p style="font-size: 14px"><strong style="font-size: 14px">To. </strong><!--받는 사람-->Anonymous</p>
+                    <span><strong style="font-size: 14px">Title.</strong><input type="text"></span>
+                    <p style="font-size: 14px; padding-top: 10px"><strong style="font-size: 14px">Your Message.</strong></p>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
+                
+                <!-- Modal footer -->
+                <div class="modal-footer modal_footer_styler">
+                    <button type="button" class="btn btn-primary" title="전송">Send</button> <!--전송 버튼-->
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" title="취소">Cancel</button>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+                
 
         <div class="divider_h_o1">
             <div class="divider_h_i1"></div>
