취업일지뿌리기

--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -329,47 +329,16 @@
                         <tbody id="upload_Table">
                             <tr>
                                 <td>
-                                    <input type="text" id="update_Date" readonly value="18/6/24" class="update_Daily">
+                                    <input type="text" id="update_Date" value=<%= results[0].date %> class="update_Daily">
                                 </td>
                                 <td>
-                                    <input type="text" id="update_Content" readonly value="카카오 SW기획 파트 인턴 서류 전형" class="update_Daily">
+                                    <input type="text" id="update_Content" value=<%= results[0].content %> class="update_Daily">
                                 </td>
                                 <td>
-                                    <input type="text" id="update_Result" readonly value="불합격" class="update_Daily">
+                                    <input type="text" id="update_Result" value=<%= results[0].result %> class="update_Daily">
                                 </td>
                             </tr>
-                            <tr>
-                                <td>
-                                    <input type="text" id="update_Date" readonly value="18/7/12" class="update_Daily">
-                                </td>
-                                <td>
-                                    <input type="text" id="update_Content" readonly value="네이버 개발파트(웹 프런트) 신입 정규직 서류" class="update_Daily">
-                                </td>
-                                <td>
-                                    <input type="text" id="update_Result" readonly value="합격" class="update_Daily">
-                                </td>
-                                <tr>
-                                    <td>
-                                        <input type="text" id="update_Date" readonly value="18/7/7" class="update_Daily">
-                                    </td>
-                                    <td>
-                                        <input type="text" id="update_Content" readonly value="삼성 SDS SW개발파트 신입 정규직 서류" class="update_Daily">
-                                    </td>
-                                    <td>
-                                        <input type="text" id="update_Result" readonly value="합격" class="update_Daily">
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        <input type="text" id="update_Date" readonly value="18/7/15" class="update_Daily">
-                                    </td>
-                                    <td>
-                                        <input type="text" id="update_Content" readonly value="삼성 SDS SW개발파트 신입 정규직 1차 면접(알고리즘)" class="update_Daily">
-                                    </td>
-                                    <td>
-                                        <input type="text" id="update_Result" readonly value="대기중" class="update_Daily">
-                                    </td>
-                                </tr>
+                            
                         </tbody>
                     </table>
 
