--- a/public/stylesheets/specCompare.css
+++ b/public/stylesheets/specCompare.css
@@ -1,7 +1,7 @@
 body,html{
     width: 100%;
     height: 100%;
-    background: url('/images/schback.jpg') no-repeat center center fixed;
+    background: url('/images/spec_Compare_Page_Image.png') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
